--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/TelegramGameBuilds.loader.js";
       var config = {
-        dataUrl: buildUrl + "/TelegramGameBuilds.data.gz",
-        frameworkUrl: buildUrl + "/TelegramGameBuilds.framework.js.gz",
-        codeUrl: buildUrl + "/TelegramGameBuilds.wasm.gz",
+        dataUrl: buildUrl + "/TelegramGameBuilds.data",
+        frameworkUrl: buildUrl + "/TelegramGameBuilds.framework.js",
+        codeUrl: buildUrl + "/TelegramGameBuilds.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Crosswalk Mayhem",
